<resources>
    <string name="app_name">Drink&amp;Talk</string>
    <string name="tvLogin">Daj nadimak ili ime</string>
    <string name="btn_prijavi">PRIJAVI SE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_kreiraj">KREIRAJ IGRU</string>
    <string name="btn_prijavi_u_postojecu">PRIJAVI SE U POSTOJEĆU IGRU</string>
    <string name="title_activity_scan_screen">ScanScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="prijavljena_ekipa">PRIJAVLJENA EKIPA</string>
    <string name="vrijeme_igre">VRIJEME IGRE</string>
    <string name="spusti">spusti i ne diraj \nmobitel za</string>
    <string name="kreni">kreni s igrom</string>
    <string name="bravo">bravo!</string>

    <string name="bravo2">vi ste prava ekipa \nkoja može zaboraviti \ntehnologiju na tren.
    </string>
    <string name="nova">NOVA IGRA?</string>
    <string name="loser">luuuzeer je...</string>

    <string name="loser2">ne sluša ekipu</string>
    <string name="loser3">i plaća ovu rundu</string>



    <string name="game1">Ukoliko podigneš mobitel u</string>
    <string name="game2">sljedećih</string>
    <string name="game3">ostalim</string>
    <string name="game4">sudionicima igre doći će</string>
    <string name="game5">notifikacija da si izgubio.</string>
    <string name="game6">Budi fer i plati piće ako izgubiš!</string>
    <string name="sekundi">sekundi</string>


</resources>